--- a/source/css/_variables.styl
+++ b/source/css/_variables.styl
@@ -1,9 +1,14 @@
 // Color
 
 color-font = #323232;
+color-dark = #000
 color-background = #FEFEFE
 color-none = rgba(0, 0, 0, 0)
 color-border = #C4C4C4
+color-hover = #E3E3E3
+color-danger = #F61618
+color-side = #EDEDED
+
 // Font
 size-font = 14px
 
@@ -11,4 +16,4 @@ size-font = 14px
 side-time = 300ms
 
 // layout
-side-width = 300px
+side-width = 210px
