--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -19,6 +19,7 @@
   %>
   <title><% if (title){ %><%= title %> | <% } %><%= config.title %></title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta charset="utf-8">
   <link rel="alternate" href="<%- theme.rss %>" title="<%= config.title %>" type="application/atom+xml">
   <% if (theme.favicon){ %>
     <link rel="icon" href="<%- theme.favicon %>">
