--- a/source/css/_variables.styl
+++ b/source/css/_variables.styl
@@ -1,6 +1,7 @@
 // Color
 
-color-font = #323232;
+color-font = #323232
+color-light-font = #525252
 color-dark = #000
 color-background = #FEFEFE
 color-none = rgba(0, 0, 0, 0)
