--- a/source/css/_util/mixin.styl
+++ b/source/css/_util/mixin.styl
@@ -1,3 +1,4 @@
+@import '../_variables'
 transform()
   transform arguments
   -webkit-transform arguments
@@ -9,3 +10,8 @@ perspective()
   -webkit-perspective arguments
   -moz-perspective arguments
   perspective arguments
+ifont()
+  font-family 'iconfont'
+  font-size 18px
+  font-style normal
+  color color-light-font
