--- a/source/css/_variables.styl
+++ b/source/css/_variables.styl
@@ -1,7 +1,7 @@
 // Color
 
 color-font = #323232
-color-light-font = #525252
+color-light-font = #616161 + 10
 color-dark = #000
 color-background = #FEFEFE
 color-none = rgba(0, 0, 0, 0)
@@ -15,6 +15,6 @@ size-font = 14px
 
 // Time
 side-time = 300ms
-
+hover-time = 200ms
 // layout
 side-width = 210px
