--- a/layout/_partial/sidebar.ejs
+++ b/layout/_partial/sidebar.ejs
@@ -22,7 +22,7 @@
       </a>
     </div>
     <div class="nav-item">
-      <a href="theme.menu.categories">
+      <a href="<%= theme.menu.categories %>">
         <span>
           <%= site.categories.length %>
         </span>
@@ -30,7 +30,7 @@
       </a>
     </div>
     <div class="nav-item">
-      <a href="theme.menu.tags">
+      <a href="<%= theme.menu.tags %>">
         <span>
           <%= site.tags.length %>
         </span>
