--- a/source/css/_variables.styl
+++ b/source/css/_variables.styl
@@ -1,6 +1,7 @@
 // Color
 
 color-font = #323232
+color-header-font = #202020
 color-light-font = #616161 + 10
 color-dark = #000
 color-background = #FEFEFE
