--- a/source/css/_variables.styl
+++ b/source/css/_variables.styl
@@ -5,11 +5,11 @@ color-header-font = #202020
 color-light-font = #616161 + 10
 color-dark = #000
 color-background = #FEFEFE
+color-background-deep = #EDEDED
 color-none = rgba(0, 0, 0, 0)
 color-border = #C4C4C4
 color-hover = #E3E3E3
 color-danger = #F61618
-color-side = #EDEDED
 
 // Font
 size-font = 14px
