--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -8,8 +8,20 @@
         <time datetime="<%= date_xml(post.date) %>" itemprop="datePublished"><%= date(post.date, config.date_format) %></time>
       </div>
       <div class="content-wrap">
-        <%- post.excerpt %>
+        <% if (post.excerpt) { %>
+          <%- post.excerpt %>
+        <% } else { %>
+          <%- post.content %>
+        <% } %>
       </div>
     </div>
   <% }) %>
+  <% if (page.total > 1){ %>
+    <nav id="page-nav" class="page-nav">
+      <%- paginator({
+        prev_text: "<i class='i-left'></i>",
+        next_text: "<i class='i-right'></i>"
+      }) %>
+    </nav>
+  <% } %>
 </section>
