--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -16,6 +16,7 @@
         <%- body %>
       </section>
     </div>
+    <%- partial('_partial/footer') %>
   </div>
   <script src="//cdn.bootcss.com/jquery/2.2.4/jquery.min.js"></script>
   <%- js('js/script') %>
