--- a/source/css/_variables.styl
+++ b/source/css/_variables.styl
@@ -7,9 +7,9 @@ color-dark = #000
 color-background = #FEFEFE
 color-background-deep = #EDEDED
 color-none = rgba(0, 0, 0, 0)
-color-border = #C4C4C4
+color-border = #e0e0e0
 color-hover = #E3E3E3
-color-danger = #F61618
+color-danger = #b71c1c
 
 // Font
 size-font = 14px
