--- a/source/css/_variables.styl
+++ b/source/css/_variables.styl
@@ -9,6 +9,7 @@ color-background-deep = #EDEDED
 color-none = rgba(0, 0, 0, 0)
 color-border = #e0e0e0
 color-hover = #E3E3E3
+color-hover-line = #1b1a1a
 color-danger = #b71c1c
 
 // Font
