--- a/source/css/_partial/content.styl
+++ b/source/css/_partial/content.styl
@@ -5,14 +5,26 @@
   padding 20px
   margin 20px auto 0
 .archives
-  margin-bottom 30px
+  margin-bottom 50px
   .title-wrap
     margin 20px 0
     padding-bottom 10px
     border-bottom 1px solid color-border
     .post-title
+      position relative
+      display inline-block
       font-size 26px
       color color-header-font
+    .post-title::before
+      content ''    
+      bottom 0      
+      width 100%
+      position absolute      
+      border-top 2px solid color-hover-line
+      transform scale3d(0,1,1)
+      transition transform hover-time ease-in-out      
+    .post-title:hover::before
+      transform scale3d(1,1,1)
     .page-info
       padding-top 10px
       font-size 16px
@@ -20,7 +32,29 @@
       a
         color color-light-font
         &:hover
-          border-bottom 1px solid color-hover
+          border-bottom 1px solid color-hover-line
+  .read-more
+    text-align left
+    a
+      color color-header-font
+      line-height 14px
+      transition all hover-time ease-in-out
+      &:hover
+        border-bottom 1px solid color-hover-line
+        span
+          color color-dark
+      span
+        font-size 14px
+        &::after
+          font-size 12px
+  .content-wrap
+    p
+      margin: 0 0 25px 0
+      text-align justify
+    img
+      display block
+      border 1px solid color-border
+      margin auto
       
 .page-nav
   margin 40px 0
