--- a/source/css/_partial/highlight.styl
+++ b/source/css/_partial/highlight.styl
@@ -1,8 +1,7 @@
-// https://github.com/chriskempson/tomorrow-theme
-highlight-background = #2d2d2d
+highlight-background = #fafafa
 highlight-current-line = #393939
 highlight-selection = #515151
-highlight-foreground = #cccccc
+highlight-foreground = #515151
 highlight-comment = #999999
 highlight-red = #f2777a
 highlight-orange = #f99157
@@ -14,8 +13,8 @@ highlight-purple = #cc99cc
 
 $code-block
   background: highlight-background
-  margin: 0 auto 15px
-  padding: 10px 20px
+  margin: 1em auto 
+  padding: 10px
   overflow: auto
   color: highlight-foreground
   line-height: 1.5
