--- a/source/css/_variables.styl
+++ b/source/css/_variables.styl
@@ -2,7 +2,8 @@
 
 color-font = #323232
 color-header-font = #202020
-color-light-font = #616161 + 10
+color-light-font = #616171
+color-highlight = #b71c1c
 color-dark = #000
 color-background = #FEFEFE
 color-background-deep = #EDEDED
@@ -13,8 +14,12 @@ color-hover-line = #1b1a1a
 color-danger = #b71c1c
 
 // Font
-size-font = 14px
+size-font = 1em
 line-height = 1.5
+family = 'Roboto', Lato, 'Droid Sans', 'Helvetica', 'Arial', sans-serif
+font-header-lg = 1.75em
+font-header-md = 1.5em
+font-header-sm = 1.1em
 // Time
 side-time = 300ms
 hover-time = 200ms
