--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -6,17 +6,15 @@ html, body
 html
   -webkit-overflow-scrolling touch
   -webkit-text-size-adjust 100%
-  -webkit-user-select none
 body
   margin 0
   padding 0
   position relative
   word-break break-all
   word-wrap break-word
-  -webkit-user-select none
   font-size size-font
   line-height 1.5
-  font-family Lato, "PingFang SC", "Microsoft YaHei", Helvetica, Arial, sans-serif;
+  font-family family
   background color-background
   color color-font
 
