--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -17,6 +17,7 @@ body
   font-family family
   background color-background
   color color-font
+  transition all global-time ease-in-out
 
                                        
 @font-face
