--- a/source/css/_util/mixin.styl
+++ b/source/css/_util/mixin.styl
@@ -4,7 +4,6 @@ transform()
   -webkit-transform arguments
   -moz-transform arguments
   -ms-transform arguments
-  -o-transform arguments
 // perspective 要求不那么高
 perspective()
   -webkit-perspective arguments
@@ -15,3 +14,8 @@ ifont()
   font-size 18px
   font-style normal
   color color-light-font
+transition()
+  transition arguments
+  -webkit-transition arguments
+  -moz-transition arguments
+  -ms-transition arguments
