--- a/source/css/_variables.styl
+++ b/source/css/_variables.styl
@@ -7,6 +7,7 @@ color-highlight = #b71c1c
 color-dark = #000
 color-background = #FEFEFE
 color-background-deep = #EDEDED
+color-background-shallow = #EDEDED + 10
 color-none = rgba(0, 0, 0, 0)
 color-border = #e0e0e0
 color-hover = #E3E3E3
@@ -23,5 +24,6 @@ font-header-sm = 1.1em
 // Time
 side-time = 300ms
 hover-time = 200ms
+global-time = 200ms
 // layout
 side-width = 210px
