--- a/source/css/_partial/content.styl
+++ b/source/css/_partial/content.styl
@@ -74,6 +74,7 @@
     img
       display block
       border 1px solid color-border
+      max-width 100%
 .page-nav
   margin 40px 0
   text-align center
