--- a/source/css/_partial/side.styl
+++ b/source/css/_partial/side.styl
@@ -1,7 +1,8 @@
-.header
-  display none
-  padding-left 10px
-  margin-top 10px;
+.side
+  position fixed
+  bottom 20px
+  left 30px
+  transition side-time all
   .arrows
     width 25px
     height 25px
@@ -10,7 +11,6 @@
     line-height 25px
     text-align center
     cursor pointer
-    transition side-time all
     background-color color-hover
     &:after
       content '\e602'
