--- a/source/css/_partial/sidebar.styl
+++ b/source/css/_partial/sidebar.styl
@@ -2,6 +2,8 @@
 .sideShow 
   .arrows
     transform rotate3d(0, 1, 0, 180deg)
+  .side
+    transform translate3d(210px, 0, 0)
   .wrap
     padding-left side-width  
   .sidebar
