--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -54,9 +54,11 @@ body
 .i-next::after
   content '\e603'
 .wrap
+  position relative
   transition side-time all ease-in-out
   
 @import '_partial/header'
+@import '_partial/side'
 @import '_partial/sidebar'
 @import '_partial/content'
 @import '_partial/highlight'
