--- a/source/css/_variables.styl
+++ b/source/css/_variables.styl
@@ -4,6 +4,7 @@ color-font = #323232
 color-header-font = #202020
 color-light-font = #616171
 color-highlight = #b71c1c
+color-href = #093272
 color-dark = #000
 color-background = #FEFEFE
 color-background-deep = #EDEDED
@@ -16,7 +17,7 @@ color-danger = #b71c1c
 // Font
 size-font = 1em
 line-height = 1.5
-family = 'Roboto', Lato, 'Droid Sans', 'Helvetica', 'Arial', sans-serif
+family = "Lantinghei SC", "Open Sans", Arial, "Hiragino Sans GB", "Microsoft YaHei", STHeiti, "WenQuanYi Micro Hei", SimSun, Helvetica, sans-serif
 font-header-lg = 1.75em
 font-header-md = 1.5em
 font-header-sm = 1.1em
