--- a/layout/post.ejs
+++ b/layout/post.ejs
@@ -1,3 +1,12 @@
+<% if(page.type === 'tags') { %>
+
+<p>主题搭建中</p>
+
+<% } else if (page.type === 'categories') { %>
+
+<p>主题搭建中</p>
+
+<% } else { %>
 <section class="archives-wrap">
   <div class="archives">
     <div class="title-wrap">
@@ -17,3 +26,4 @@
     </div>
   </div>
 </section>
+<% } %>
