--- a/source/css/_partial/content.styl
+++ b/source/css/_partial/content.styl
@@ -75,6 +75,9 @@
       display block
       border 1px solid color-border
       max-width 100%
+    a
+      color color-href
+      text-decoration underline
 .page-nav
   margin 40px 0
   text-align center
