--- a/source/css/_partial/sidebar.styl
+++ b/source/css/_partial/sidebar.styl
@@ -14,6 +14,7 @@
   left 0
   top 0
   bottom 0
+  z-index 2
   width side-width
   // use transform to hide sidebar
   transform translate3d(-(side-width), 0, 0)
