add eslint and gulp

--- a/layout/layout_dev.ejs
+++ b/layout/layout_dev.ejs
@@ -19,6 +19,6 @@
     <%- partial('_partial/footer') %>
     </div>
   </div>
-  <%- js('js/simple_dev') %>
+  <%- js('simple_script') %>
 </body>
 </html>
