--- a/source/css/_partial/side.styl
+++ b/source/css/_partial/side.styl
@@ -11,12 +11,13 @@
     line-height 25px
     text-align center
     cursor pointer
-    background-color color-hover
     &:after
       content '\e602'
       font-family iconfont
       font-size 14px
       color #7F7F7F
       // 居中
+    &:hover
+      background-color color-hover
     &:hover:after
      color color-danger
