--- a/layout/_partial/side.ejs
+++ b/layout/_partial/side.ejs
@@ -1,4 +1,4 @@
 <div class="side">
-  <div class="arrows" id="back-top"></div>
+  <div class="top" id="back-top"></div>
   <div class="arrows" id="nav-btn"></div>
 </div>
