--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -3,6 +3,7 @@
   <head>
     <%
     var title = page.title;
+    var subtitle = page.subtitle
     if (is_archive()){
       title = __('archive_a');
 
@@ -17,7 +18,14 @@
       title = __('tag') + ': ' + page.tag;
     }
     %>
-    <title><% if (title){ %><%= title %> | <% } %><%= config.title %></title>
+    <title>
+    <% if (title){ %>
+    <%= title %> 
+      <% if(subtitle) { %> | <%= subtitle %><% } %>
+    <% } else { %>
+    <%= config.title %>
+    <% } %>
+    </title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta charset="utf-8">
     <link rel="alternate" href="<%- theme.rss %>" title="<%= config.title %>" type="application/atom+xml">
