--- a/source/css/_partial/content.styl
+++ b/source/css/_partial/content.styl
@@ -104,3 +104,8 @@
     border-bottom 1px solid color-dark
   a
     color color-light-font
+
+// commnets
+.ds-thread
+  width 96%
+  margin 0 auto
