--- a/layout/layout.ejs
+++ b/layout/layout.ejs
@@ -19,7 +19,7 @@
     <%- partial('_partial/footer') %>
     </div>
   </div>
-  <%- js('js/simple_dev') %>
+  <%- js('js/simple_build') %>
   <% if (theme.duoshuo_shortname) { %>
     <%- partial('_script/comments/duoshuo.ejs') %>
   <% } else if (theme.disqus_shortname) { %>
