--- a/source/css/_util/mixin.styl
+++ b/source/css/_util/mixin.styl
@@ -5,6 +5,12 @@ transform()
   -moz-transform arguments
   -ms-transform arguments
   -o-transform arguments
+box-shadow()
+  box-shadow arguments
+  -webkit-box-shadow arguments
+  -moz-box-shadow arguments
+  -ms-box-shadow arguments
+  -o-box-shadow arguments
 // perspective 要求不那么高
 perspective()
   -webkit-perspective arguments
