--- a/layout/_partial/header.ejs
+++ b/layout/_partial/header.ejs
@@ -1,3 +1,7 @@
 <header class="header">
-  <div class="arrows" id="nav-btn"></div>
+  <a href="/">首页</a>
+  <a href="<%= theme.menu.archives %>">日志</a>
+  <a href="<%= theme.menu.categories %>">分类</a>
+  <a href="<%= theme.menu.tags %>">标签</a>
+  <a href="/atom.xml">RSS</a>
 </header>
