--- a/source/css/_partial/header.styl
+++ b/source/css/_partial/header.styl
@@ -1,23 +1,10 @@
 .header
-  display none
-  padding-left 10px
-  margin-top 10px;
-  .arrows
-    width 25px
-    height 25px
-    border-radius 50%
-    border 1px solid color-none
-    line-height 25px
-    text-align center
-    cursor pointer
-    transition side-time all
-    background-color color-hover
-    &:after
-      content '\e602'
-      font-family iconfont
-      font-size 14px
-      color #7F7F7F
-      // 居中
-      transform translate(-50%, -50%)
-    &:hover:after
-     color color-danger
+  max-width 760px
+  margin 0 auto 20px
+  text-align center
+  padding 10px 20px
+  background-color color-white
+  box-shadow 0 1px 3px color-hover
+  a
+    display inline-block
+    padding 0 10px
