--- a/layout/_partial/footer.ejs
+++ b/layout/_partial/footer.ejs
@@ -1,3 +1,4 @@
-<footer style="text-align:center">
-  啦啦啦，主题搭建中。。。
+<footer class="footer">
+  <div><%= config.description %></div>
+  <div>由<a href="https://hexo.io/">Hexo</a>强力驱动 | 主题- <a href="https://github.com/wszgxa/hexo-theme-simple">Simple</a></div>
 </footer>
