--- a/layout/_partial/sidebar.ejs
+++ b/layout/_partial/sidebar.ejs
@@ -10,7 +10,7 @@
   </div>
   <div class="name"><%= theme.author %></div>
   <div class="desc">
-    <h4><%= theme.description %></h4>  
+    <h4><%= config.description %></h4>  
   </div>
   <nav class="side-nav">
     <div class="nav-item">
