--- a/source/css/_partial/content.styl
+++ b/source/css/_partial/content.styl
@@ -81,7 +81,8 @@
       border 1px solid color-border
     a
       color color-href
-      text-decoration underline
+      &:hover
+        text-decoration underline
     table
       max-width 80%
       margin 0 auto
