--- a/source/css/_variables.styl
+++ b/source/css/_variables.styl
@@ -5,7 +5,7 @@ color-font = #323232
 color-header-font = #202020
 color-light-font = #616171
 color-highlight = #b71c1c
-color-href = #093272
+color-href = #4078c0
 color-dark = #000
 color-background = #FEFEFE
 color-background-deep = #EDEDED
