--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -56,9 +56,10 @@ body
 .wrap
   position relative
   transition side-time all ease-in-out
-  
+
 @import '_partial/header'
 @import '_partial/side'
 @import '_partial/sidebar'
 @import '_partial/content'
 @import '_partial/highlight'
+@import '_partial/footer'
