--- a/layout/_partial/header.ejs
+++ b/layout/_partial/header.ejs
@@ -3,5 +3,6 @@
   <a href="<%= theme.menu.archives %>">日志</a>
   <a href="<%= theme.menu.categories %>">分类</a>
   <a href="<%= theme.menu.tags %>">标签</a>
+  <a href="<%= theme.menu.about %>">关于</a>
   <a href="/atom.xml">RSS</a>
 </header>
