--- a/source/css/_partial/header.styl
+++ b/source/css/_partial/header.styl
@@ -1,10 +1,11 @@
 .header
-  max-width 760px
+  max-width 800px
   margin 0 auto 20px
   text-align center
-  padding 10px 20px
   background-color color-white
   box-shadow 0 1px 3px color-hover
   a
     display inline-block
-    padding 0 10px
+    padding 10px 10px
+    &:hover
+      background-color color-hover      
