--- a/source/css/_partial/header.styl
+++ b/source/css/_partial/header.styl
@@ -7,5 +7,8 @@
   a
     display inline-block
     padding 10px 10px
+    transition background-color hover-time ease
     &:hover
-      background-color color-hover      
+      background-color color-hover 
+  .ac
+    color color-danger
