--- a/layout/post.ejs
+++ b/layout/post.ejs
@@ -4,7 +4,7 @@
 
 <% } else if (page.type === 'categories') { %>
 
-<p>主题搭建中</p>
+<%- partial('_partial/categories.ejs') %>
 
 <% } else { %>
 <div class="archives-wrap">
