--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -62,4 +62,5 @@ body
 @import '_partial/sidebar'
 @import '_partial/content'
 @import '_partial/highlight'
+@import '_partial/ct'
 @import '_partial/footer'
