--- a/source/css/_partial/footer.styl
+++ b/source/css/_partial/footer.styl
@@ -1,10 +1,10 @@
 .footer
-  width 800px
+  max-width 800px
   margin 10px auto 0
   text-align center
   background-color color-white
   box-shadow 0 0 5px color-hover
-  padding-bottom 20px
+  padding 10px 0
   a
     color color-href
     &:hover
