--- a/layout/post.ejs
+++ b/layout/post.ejs
@@ -1,6 +1,6 @@
 <% if(page.type === 'tags') { %>
 
-<p>主题搭建中</p>
+<%- partial('_partial/tags.ejs') %>
 
 <% } else if (page.type === 'categories') { %>
 
