--- a/source/css/_partial/ct.styl
+++ b/source/css/_partial/ct.styl
@@ -21,3 +21,15 @@
       content '['
     &:after
       content ']'
+
+.tags-cloud
+  width 80%
+  margin 20px auto 0
+  text-indent 4px
+  text-align center
+  word-break normal 
+  a
+    display inline-block
+    margin 5px
+    &:hover
+      border-bottom 1px solid color-hover
