--- a/source/css/_partial/header.styl
+++ b/source/css/_partial/header.styl
@@ -5,6 +5,7 @@
   background-color color-white
   box-shadow 0 1px 3px color-hover
   a
+    color color-font
     display inline-block
     padding 10px 10px
     transition background-color hover-time ease
