--- a/source/css/_partial/ct.styl
+++ b/source/css/_partial/ct.styl
@@ -33,3 +33,11 @@
     margin 5px
     &:hover
       border-bottom 1px solid color-hover
+
+.ct-title
+  margin 10px auto 20px
+  text-align center
+  h2
+    font-size font-header-lg
+  small
+    color color-light-font
